--- a/app/Default Dashboard Theme.customCSS.css
+++ b/app/Default Dashboard Theme.customCSS.css
@@ -15,6 +15,56 @@ body.body-overlayed>#viewControllerApp>div>div>.ui-view {
 button:focus {outline:0;}
 
 
+
+
+
+.ui-view[data-view="singleMapTitleBarView"] {
+    background: rgba(0,0,0,0.1);
+    height: 58px;
+
+
+    [data-col="created"] {
+        display: none;
+    }
+    [data-col="modified"] {
+        display: none;
+    }
+    [data-identifier="col-selection"] {
+        display: none;
+    }
+    [data-col="user"] {
+        display: none;
+    }
+    
+    [data-col="attachments"] .field-value{
+        display:none;
+    }
+    
+    .ui-view[data-view="singleProjectListItemTableDetail"] {
+        display:inline-block;
+        width: auto;
+        background-color: white;
+        margin: 10px;
+        border-radius: 3px;
+        height: 25px;
+        line-height: 25px;
+    }
+    
+    
+    div.field-value-module.inline {
+        
+        /* min-width: 250px; */
+        width: auto;
+        max-width: 16%;
+        padding-right:15px
+    }
+
+}
+
+
+
+
+
 .bubble.layer-loading {
     height: 65px;
 }
