--- a/app/Default Dashboard Theme.customCSS.css
+++ b/app/Default Dashboard Theme.customCSS.css
@@ -48,6 +48,7 @@ button:focus {outline:0;}
         border-radius: 3px;
         height: 25px;
         line-height: 25px;
+        border: none;
     }
     
     
