administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/Default Dashboard Theme.customCSS.css
+++ b/app/Default Dashboard Theme.customCSS.css
@@ -59,6 +59,14 @@ button:focus {outline:0;}
         max-width: 16%;
         padding-right:15px
     }
+    
+    .tag-width span.field-value {
+        width: 20px;
+        height: 20px;
+        vertical-align: bottom;
+        margin-bottom: 3.5px;
+        font-size: 0;
+    }
 
 }
 
