administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/Default Dashboard Theme.customCSS.css
+++ b/app/Default Dashboard Theme.customCSS.css
@@ -22,6 +22,10 @@ button:focus {outline:0;}
     background: rgba(0,0,0,0.1);
     height: 58px;
 
+    button{
+        display:none;
+        
+    }
 
     [data-col="created"] {
         display: none;
