administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/gct3Theme.customCSS.css
+++ b/app/gct3Theme.customCSS.css
@@ -628,6 +628,10 @@ ul.project, ul.user{
     
 }
 
+.dataset-item .field-value-module.item-icon, .dataset-item .field-value-module.item-icon>.field-label {
+    background-size: 75%;
+}
+
 .ui-view.section-module.dataset-item {
     height: unset;
 }
