administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/gct3Theme.customCSS.css
+++ b/app/gct3Theme.customCSS.css
@@ -16,18 +16,23 @@ span.field-value.is-dark {
     margin: 0 15px;
     background-color: #2e354c;
     color: white;
-}
 
-.search-result-list.hybrid  span.result-clickable {
-    font-size: 15px;
-    font-weight:500;
-    line-height:30px;
-    height:30px;
-}
 
-.search-result-list.hybrid  .field-label {
-    font-size: 8px;
-    margin-right:5px
+    span.result-clickable {
+        font-size: 15px;
+        font-weight:500;
+        line-height:30px;
+        height:30px;
+    }
+    
+    .field-label {
+        font-size: 8px;
+        margin-right:5px
+    }
+    
+     span.result-clickable:hover {
+        	background-color: #9e1016;
+    }
 }
 
 
