--- a/app/gct3Theme.customCSS.css
+++ b/app/gct3Theme.customCSS.css
@@ -36,7 +36,6 @@ span.field-value.is-dark {
 }
 
 
-
 .project-list-filters.section-indent{
     display: inline-table;
     width: 100%;
@@ -651,6 +650,10 @@ ul.project, ul.user{
     
    
     
+}
+
+.dataset-item .field-value-module.item-icon, .dataset-item .field-value-module.item-icon>.field-label {
+    background-size: 75%;
 }
 
 .ui-view.section-module.dataset-item {
