administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/Default Dashboard Theme.customCSS.css
+++ b/app/Default Dashboard Theme.customCSS.css
@@ -1,12 +1,7 @@
 @charset "utf-8";
 
 /*Login*/
-$themeInset:#f0f0f0;
-$tagBtnColor:#e1e1e1;
 
-
-$mainStyleColor:#525252;
-$highlightBtnColor:$mainStyleColor;
 
 body.body-overlayed>#viewControllerApp>div>div>.ui-view {
     filter: blur(5px) grayscale(1);
@@ -22,6 +17,10 @@ button:focus {outline:0;}
     background: rgba(0,0,0,0.1);
     height: 58px;
 
+    button{
+        display:none;
+        
+    }
 
     [data-col="created"] {
         display: none;
