administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/Default Dashboard Theme.customCSS.css
+++ b/app/Default Dashboard Theme.customCSS.css
@@ -2,6 +2,7 @@
 
 /*Login*/
 
+
 body.body-overlayed>#viewControllerApp>div>div>.ui-view {
     filter: blur(5px) grayscale(1);
 }
@@ -16,6 +17,10 @@ button:focus {outline:0;}
     background: rgba(0,0,0,0.1);
     height: 58px;
 
+    button{
+        display:none;
+        
+    }
 
     [data-col="created"] {
         display: none;
