--- a/app/gct3Theme.customCSS.css
+++ b/app/gct3Theme.customCSS.css
@@ -36,7 +36,6 @@ span.field-value.is-dark {
 }
 
 
-
 .project-list-filters.section-indent{
     display: inline-table;
     width: 100%;
@@ -645,6 +644,7 @@ ul.project, ul.user{
     float: right;
     
     border-radius: 100%;
+    background-size: 50%;
     background-position: center;
     background-repeat: no-repeat;
     
@@ -653,9 +653,8 @@ ul.project, ul.user{
 }
 
 .dataset-item .field-value-module.item-icon, .dataset-item .field-value-module.item-icon>.field-label {
-    background-size: $datasetIconSize;
+    background-size: 75%;
 }
-
 
 .ui-view.section-module.dataset-item {
     height: unset;
