administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/sharedGeneratedStyles.customCSS.css
+++ b/app/sharedGeneratedStyles.customCSS.css
@@ -1,15 +1,15 @@
 
-@if $useFontAwesome {
+@if $useFontAwesome 
     .test_bool_true{
          color:blue;
     }
- }
  
- @if not $useFontAwesome {
+ 
+ @if not $useFontAwesome 
     .test_bool_false{
         color:blue;
     }
- }
+ 
 
 
 .project-type-missing-tasks-hint {
