administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/sharedGeneratedStyles.customCSS.css
+++ b/app/sharedGeneratedStyles.customCSS.css
@@ -559,6 +559,21 @@ $backgroundImage=$config->getParameter('backgroundImage', array());
             <?php
         }
         
+        ?>
+        
+        @if not $showUsersRoles{
+            
+            
+            
+        }
+        @else{
+            
+            
+            
+        }
+        
+        <?php
+        
          if(!$config->getParameter("showUsersRoles")){
             ?>
         
