--- a/app/sharedGeneratedStyles.customCSS.css
+++ b/app/sharedGeneratedStyles.customCSS.css
@@ -1,4 +1,10 @@
 
+ 
+
+
+
+
+
 
 .project-type-missing-tasks-hint {
     background-image:url("<?php echo UrlFrom("{assets}/Control Panel Icons/tree.png?tint=rgb(198, 175, 79)"); ?>");
@@ -40,11 +46,7 @@ $config=GetWidget('dashboardConfig');
 
 
 $useFontAwesome=$config->getParameter('useFontAwesome');
-if($useFontAwesome){
-    ?>
-    
-    <?php
-}
+
 
 
     $offsetY=10;
@@ -82,8 +84,10 @@ if(!$useFontAwesome){
     }
 }
 
-if($config->getParameter('showSplitProjectDetail')){
+
     ?>
+    
+@if $showSplitProjectDetail{
    
    [data-view="splitProjectDetail"]>div>div{
         display:inline-table;
@@ -91,11 +95,11 @@ if($config->getParameter('showSplitProjectDetail')){
         height: 100%;
     }
     
-    
+}
     
     <?php
     
-}
+
 
 foreach(['apple', 'google'] as $mobile){
     $appIcon=$config->getParameter($mobile.'AppIcon', array());
@@ -203,38 +207,20 @@ if(!empty($altLogo)){
     }
     <?php
 }
+?>
 
 
-
-
-$gatherLogo=$config->getParameter('gatherLogo', array());
-        if(empty($gatherLogo)){
-            $gatherLogo=$menuIconDefault;
-        }else{
-            $gatherLogo=$gatherLogo[0];
-        }
-    ?>
- .gather-logo {
-
-    background-image:url("<?php echo UrlFrom($gatherLogo."?thumb=>200x>200"); ?>");
+.gather-logo {
+    background-image:url($gatherLogo);
 }  
 
-<?php
-$gatherIcon=$config->getParameter('gatherIcon', array());
-        if(empty($gatherIcon)){
-            $gatherIcon=$gatherLogo;
-        }else{
-            $gatherIcon=$gatherIcon[0];
-        }
-    ?>
- .gather-icon {
-    
-    background-image:url("<?php echo UrlFrom($gatherIcon."?thumb=>200x>200"); ?>");
+.gather-icon {
+    background-image:url($gatherIcon);
 } 
 
 
 .navigation-menu li.menu-links-gather:before{
-     background-image:url("<?php echo UrlFrom($gatherIcon."?thumb=>200x>200"); ?>");
+     background-image:url($gatherIcon);
      content:"";
      width: 30px;
      height: 30px;
@@ -276,17 +262,15 @@ if(!$useFontAwesome){
     position: relative;
 }
 
-<?php 
 
+@if not $useFontAwesome{
 
-if(!$useFontAwesome){
-    ?>
     .field-value-module.with-description .field-value:after{
          background-image: url("<?php echo UrlFrom("{assets}/Control Panel Icons/text.png?tint=rgb(180,180,180)"); ?>");
     }
-<?php 
+
 }
-?>
+
 .field-value-module.with-description .field-value:after{
     content: "";
     width: 20px;
@@ -299,28 +283,15 @@ if(!$useFontAwesome){
 }
 
 
+@if not $useFontAwesome{
 
-<?php
-
-
-
-if(!$useFontAwesome){
-    ?>
-.synopsis-item {
-    background-image:url("<?php echo UrlFrom($menuIconDefault."?tint=rgb(180,180,180)"); ?>");
-}
-<?php 
-}
-?>
+    .synopsis-item {
+        background-image:url("<?php echo UrlFrom($menuIconDefault."?tint=rgb(180,180,180)"); ?>");
+    }
 
 
+    <?php 
 
-
-<?php 
-
-
-if(!$useFontAwesome){
-    
         $starredIcon=$config->getParameter('starIcon', array());
         if(empty($starredIcon)){
             $starredIcon=$menuIconDefault;
@@ -328,35 +299,23 @@ if(!$useFontAwesome){
             $starredIcon=$starredIcon[0];
         }
     ?>
- .starred-indicator {
-
-    background-image:url("<?php echo UrlFrom($starredIcon."?tint=rgb(180,180,180)"); ?>");
-}   
-.starred-indicator.starred {
-
-    background-image:url("<?php echo UrlFrom($starredIcon."?tint=".$config->getParameter("starTint", "rgb(180,180,180)")); ?>");
-}
-
-
-.starred-tasks {
-    background-image:url("<?php echo UrlFrom($starredIcon."?tint=".$config->getParameter("starTint", "rgb(180,180,180)")); ?>");
-    border-color:<?php echo $config->getParameter("starTint", "rgb(180,180,180)"); ?>;
+    .starred-indicator {
     
-}
+        background-image:url("<?php echo UrlFrom($starredIcon."?tint=rgb(180,180,180)"); ?>");
+    }   
+    .starred-indicator.starred {
+    
+        background-image:url("<?php echo UrlFrom($starredIcon."?tint=".$config->getParameter("starTint", "rgb(180,180,180)")); ?>");
+    }
+    
+    .starred-tasks {
+        background-image:url("<?php echo UrlFrom($starredIcon."?tint=".$config->getParameter("starTint", "rgb(180,180,180)")); ?>");
+        border-color:<?php echo $config->getParameter("starTint", "rgb(180,180,180)"); ?>;
+        
+    }
+
 
 <?php 
-}
-?>
-
-
-
-
-
-<?php 
-
-
-if(!$useFontAwesome){
-
 
     $priorityIcon=$config->getParameter('priorityIcon', array());
     if(empty($priorityIcon)){
@@ -384,12 +343,10 @@ if(!$useFontAwesome){
 
     ?>
     .priority-indicator {
-
-        background-image:url("<?php echo UrlFrom($priorityIcon."?tint=rgb(180,180,180)"); ?>");
+        background-image:url($priorityIcon);
     }   
     .priority-indicator.priority {
-
-        background-image:url("<?php echo UrlFrom($priorityIcon."?tint=".$config->getParameter("priorityTint", "rgb(180,180,180)")); ?>");
+        background-image:url($priorityIconTint);
     }
 
     .priority-tasks {
@@ -427,9 +384,7 @@ if(!$useFontAwesome){
          background-image:url("<?php echo UrlFrom($overdueIcon."?tint=rgba(60, 179, 113)"); ?>");
     }
 
-<?php 
 }
-?>
 
 
 
@@ -541,7 +496,7 @@ $backgroundImage=$config->getParameter('backgroundImage', array());
         }
         
         
-         $surveyMenuIcon=$config->getParameter('surveyMenuIcon', array());
+        $surveyMenuIcon=$config->getParameter('surveyMenuIcon', array());
         if(!empty($surveyMenuIcon)){
           
             $surveyMenuIcon=$surveyMenuIcon[0];
@@ -571,44 +526,38 @@ $backgroundImage=$config->getParameter('backgroundImage', array());
             <?php
         }
         
+        ?>
         
-        $slackMenuIcon=$config->getParameter('slackMenuIcon', array());
-        if(!empty($slackMenuIcon)){
-          
-            $slackMenuIcon=$slackMenuIcon[0];
-            ?>
+        
+        @if $slackMenuIcon {
             
             .survey-link a.slack-link:before,  .navigation-menu li.menu-links-slack:before {
-                background-image: url("<?php echo UrlFrom($slackMenuIcon."?thumb=x>100y>100"); ?>");
+                background-image: url($slackMenuIcon);
                 content:"";
             }
+        }    
+        
+        
+        @if not $showUsersRoles{
             
-            <?php
-        }
-        
-         if(!$config->getParameter("showUsersRoles")){
-            ?>
-        
-            .user-detail .user-role, .user-detail .user-community{
+           .user-detail .user-role, .user-detail .user-community{
                 display:none;
-            }
-            <?php
-        }else{
-            ?>
-            .user-detail .user-role, .user-detail .user-community{
-               
-            }
-            <?php
+            } 
+            
         }
-                
-        if(!$config->getParameter("showFileThumbnails")){
-            ?>
+        @else{
+           .user-detail .user-role, .user-detail .user-community{
+               
+            } 
+        }
+        
+        @if not $showFileThumbnails{
+            
             .image.attachment-thumb{
                 display:none;
             }
-            <?php
+            
         }
         
-        
-        
-?>
+    
+
