administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/sharedGeneratedStyles.customCSS.css
+++ b/app/sharedGeneratedStyles.customCSS.css
@@ -496,12 +496,10 @@ $backgroundImage=$config->getParameter('backgroundImage', array());
         }
         
         
-        $surveyMenuIcon=$config->getParameter('surveyMenuIcon', array());
-        if(!empty($surveyMenuIcon)){
-          
-            $surveyMenuIcon=$surveyMenuIcon[0];
-            ?>
-            
+        ?>
+        
+        @if $surveyMenuIcon {
+        
             .survey-link{
                 
                 text-align: left;
@@ -509,7 +507,7 @@ $backgroundImage=$config->getParameter('backgroundImage', array());
             }
 
             .survey-link a:before, .navigation-menu li.menu-links-survey:before {
-                background-image: url("<?php echo UrlFrom($surveyMenuIcon."?thumb=x>100y>100&tint=".$config->getParameter("menuIconColor", "rgb(180,180,180)")); ?>");
+                background-image: url($surveyMenuIcon);
                 content:"";
             }
             .survey-link a:before {
@@ -521,12 +519,10 @@ $backgroundImage=$config->getParameter('backgroundImage', array());
                 vertical-align: middle;
             }
             .survey-link a:hover:before  {
-                background-image: url("<?php echo UrlFrom($surveyMenuIcon."?thumb=x>100y>100&tint=".$config->getParameter("menuIconTint")); ?>");
+                background-image: url($surveyMenuIconHover);
             }
-            <?php
-        }
         
-        ?>
+        }
         
         
         @if $slackMenuIcon {
