--- a/app/sharedGeneratedStyles.customCSS.css
+++ b/app/sharedGeneratedStyles.customCSS.css
@@ -446,16 +446,13 @@ foreach(['prev', 'next'] as $nav){
     
 }
 
-
-
-$backgroundImage=$config->getParameter('backgroundImage', array());
-        if(!empty($backgroundImage)){
-          
-            $backgroundImage=$backgroundImage[0];
-            ?>
-
+?>
+        
+        
+        @if $backgroundImage {
+            
             .ui-view.dashboard-main:after {
-                background-image: url("<?php echo UrlFrom($backgroundImage."?thumb=>200x>200"); ?>");
+                background-image: url($backgroundImage);
                 position: fixed;
                 width: 100%;
                 height: 100%;
@@ -467,12 +464,9 @@ $backgroundImage=$config->getParameter('backgroundImage', array());
                 background-size: cover;
                 filter: blur(10px);
             }
-            <?php
+                
         }
         
-        
-        
-        ?>
         
         
         @if $optionsMenuIcon {
