administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/sharedGeneratedStyles.customCSS.css
+++ b/app/sharedGeneratedStyles.customCSS.css
@@ -447,6 +447,23 @@ foreach(['prev', 'next'] as $nav){
 }
 
 ?>
+
+
+
+    $nav: 'prev', 'next';
+
+    @each $n in $nav {
+        .#{4n}-btn {
+            
+        }
+      
+        .#{4n}-btn:hover {
+            
+        }
+      
+    }
+
+
         
         
         @if $backgroundImage {
