--- a/app/sharedGeneratedStyles.customCSS.css
+++ b/app/sharedGeneratedStyles.customCSS.css
@@ -454,11 +454,11 @@ foreach(['prev', 'next'] as $nav){
 
     @each $n in $nav {
         .#{4n}-btn {
-            
+            display:auto;
         }
       
         .#{4n}-btn:hover {
-            
+            display:auto;
         }
       
     }
