administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/sharedGeneratedStyles.customCSS.css
+++ b/app/sharedGeneratedStyles.customCSS.css
@@ -453,7 +453,7 @@ foreach(['prev', 'next'] as $nav){
     $nav: 'prev', 'next';
 
     @each $n in $nav {
-        .#{4n}-btn {
+        .#{$n}-btn {
             display:auto;
         }
       
