administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/sharedGeneratedStyles.customCSS.css
+++ b/app/sharedGeneratedStyles.customCSS.css
@@ -96,6 +96,21 @@ if(!$useFontAwesome){
     }
     
 }
+
+
+    
+    
+    @each $n, $icon in $mobileIcons {
+        
+        @if $icon {
+            .#{$n}-app-link{
+                    
+                background-image:url($icon);
+            }
+        }
+     }
+
+
     
     <?php
     
